tests/ui/rpc/fail/function_returning_impl_iterator.stderr
error[E0277]: the trait bound `impl Iterator<Item = usize>: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:7:6
  |
7 |   impl A {
  |  ______^
8 | |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  | |________________________________________________________________^ the trait `futures_core::stream::Stream` is not implemented for `impl Iterator<Item = usize>`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `StreamExtractor`
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ required by this bound in `StreamExtractor`
7 | impl A {
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |                           -------------------------------------- required by a bound in this
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl Iterator<Item = usize>: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:27
  |
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `futures_core::stream::Stream` is not implemented for `impl Iterator<Item = usize>`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `StreamExtractor`
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ required by this bound in `StreamExtractor`
7 | impl A {
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |                           -------------------------------------- required by a bound in this
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `get_type_ref` exists for struct `StreamExtractor<_, impl Iterator<Item = usize>>`, but its trait bounds were not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:8
  |
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ^^^^               -------------------------------------- method `get_type_ref` not found for this struct
  |        |
  |        method cannot be called on `StreamExtractor<_, impl Iterator<Item = usize>>` due to unsatisfied trait bounds
  |
note: the following trait bounds were not satisfied:
      `<impl Iterator<Item = usize> as futures_core::stream::Stream>::Item = _`
      `impl Iterator<Item = usize>: futures_core::stream::Stream`
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ unsatisfied trait bound introduced here
7 | impl A {
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::option::Option<usize>` is not a future
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^
  | |
  | `std::option::Option<usize>` is not a future
  | help: remove the `.await`
  |
  = help: the trait `std::future::Future` is not implemented for `std::option::Option<usize>`
  = note: std::option::Option<usize> must be a future or must implement `IntoFuture` to be awaited
  = note: required for `std::option::Option<usize>` to implement `std::future::IntoFuture`
